Style : Top news display

--- a/index.html
+++ b/index.html
@@ -33,19 +33,21 @@
 
     <div class="topnews">
       <div class="bignews">
-        <figure>
-          <img src="./assets/images/image-web-3-desktop.jpg" alt="Big news image">
+        <figure class="bignews-fig">
+          <img class="bignews-img" src="./assets/images/image-web-3-desktop.jpg" alt="Big news image">
         </figure>
   
         <div class="bignews-details">
-          <h1>The Bright Future of Web 3.0?</h2>
+          <h1 class="bignews-title">The Bright Future of Web 3.0?</h2>
   
           <div class="bignews-description">
             <p class="bignews-description-text">
               We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
               But is it really fulfilling its promise?
             </p>
-            <a class="bignews-description-button" href="">Read more</a>
+            <a class="bignews-description-button" href="">
+              <p class="bignews-description-button-text">Read more</p>
+            </a>
           </div>
         </div> 
       </div>
