Chore : importing jquery and display management for burgemenu

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <script src="main.js"></script>
   
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,6 +27,24 @@
       <a class="header-link" href="">Popular</a>
       <a class="header-link" href="">Trending</a>
       <a class="header-link" href="">Categories</a>
+    </div>
+
+    <figure id="burgermenu-openbutton" class="burgermenu-openclose-button">
+      <img src="./assets/images/burgermenu_button_open.png" alt="Open button">
+    </figure>
+
+    <div id="burgermenu-page">
+      <figure id="burgermenu-closebutton" class="burgermenu-openclose-button">
+        <img src="./assets/images/burgermenu_button_close.png" alt="Close button">
+      </figure>
+
+      <div class="burgermenu-page-list">
+        <a class="burgermenu-page-list-link" href="">Home</a>
+        <a class="burgermenu-page-list-link" href="">New</a>
+        <a class="burgermenu-page-list-link" href="">Popular</a>
+        <a class="burgermenu-page-list-link" href="">Trending</a>
+        <a class="burgermenu-page-list-link" href="">Categories</a>
+      </div>
     </div>
   </header>
 
