--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </div>
 
       <div class="newslist">
-        <p class="newslist-title">New</p>
+        <h2 class="newslist-title">New</h2>
   
         <div class="newslist-card">
           <h2 class="newslist-card-title">Hydrogen VS Electric Cars</h2>
